# fractals

./: CMakeLists.txt
src/: boilerplate.cpp  examples.hpp  fractal.cpp  fractal.hpp  functions.cpp  inner_fractal.hpp  interactions.cpp  main.cpp
